Updated swagger docs and ai endpoints controller
